--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dark",
-    "displayName": "MyDarkTheme",
+    "displayName": "Dark Theme(optimed for Flutter)",
     "description": "dark",
     "version": "1.0.0",
     "publisher": "DarkThemeforFlutterDev",
